# RISC-V-SJ

./: .gitignore
doc/: .~structure-graph.pptx
project_1/: project_1.xpr
project_1/project_1.gen/sources_1/ip/clk_wiz_0/: clk_wiz_0.v  clk_wiz_0.veo  clk_wiz_0.xml  clk_wiz_0_clk_wiz.v  clk_wiz_0_sim_netlist.v  clk_wiz_0_sim_netlist.vhdl  clk_wiz_0_stub.v
project_1/project_1.ip_user_files/ip/clk_wiz_0/: clk_wiz_0_stub.vhdl
project_1/project_1.ip_user_files/sim_scripts/clk_wiz_0/modelsim/: clk_wiz_0.sh  compile.do
project_1/project_1.ip_user_files/sim_scripts/clk_wiz_0/questa/: clk_wiz_0.bmj  clk_wiz_0.sh  compile.do
project_1/project_1.ip_user_files/sim_scripts/clk_wiz_0/riviera/: clk_wiz_0.sh  compile.do  file_info.txt
project_1/project_1.ip_user_files/sim_scripts/clk_wiz_0/vcs/: clk_wiz_0.sh
project_1/project_1.ip_user_files/sim_scripts/clk_wiz_0/xcelium/: README.txt  clk_wiz_0.sh
project_1/project_1.ip_user_files/sim_scripts/clk_wiz_0/xsim/: clk_wiz_0.sh  file_info.txt  vlog.prj
project_1/project_1.runs/.jobs/: vrs_config_1.xml
project_1/project_1.runs/clk_wiz_0_synth_1/: .vivado.begin.rst  clk_wiz_0.dcp  clk_wiz_0.tcl  clk_wiz_0.vds  clk_wiz_0_utilization_synth.pb  clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
project_1/project_1.runs/clk_wiz_0_synth_1/.Xil/: clk_wiz_0_propImpl.xdc
project_1/project_1.srcs/sources_1/ip/clk_wiz_0/: clk_wiz_0.xci
src/cpu/: cache.v  cache_l.v  cpu.v  reg_id_ex.v  simple_ram.v  stage_id.v
src/memory/: CMakeLists.txt  adapter.cpp  build.sh
(+6 files in other folders)
